# chandeliers

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  LICENSE  README.md  all-chandeliers.sh  deps.dot  lint.sh  manage.sh  todo
beamer/: README.md  demo.lus  main.typ
chandeliers-err/: Cargo.toml  README.md
chandeliers-err/src/: error.rs  lib.rs  transparent.rs
chandeliers-lus/: Cargo.toml  README.md  todo
chandeliers-lus/src/: lib.rs  pipeline.rs
chandeliers-lus/tests/: assert-false.rs
chandeliers-lus/tests/compile_fail/ui/causality/: cycle-const.rs  cycle-const.stderr  cycle-node.rs  cycle-node.stderr  cycle-var.rs  cycle-var.stderr  loop.rs  loop.stderr  positivity.rs  positivity.stderr  redef-const.rs  redef-const.stderr  redef-node-extern.rs  redef-node-extern.stderr  redef-node.rs  redef-node.stderr  redef-var-def.rs  redef-var-def.stderr  redef-var-ii.rs  redef-var-ii.stderr  redef-var-io.rs  redef-var-io.stderr  redef-var-iv.rs  redef-var-iv.stderr  redef-var-oo.rs  redef-var-oo.stderr  redef-var-ov.rs  redef-var-ov.stderr  redef-var-vv.rs  redef-var-vv.stderr  reg-positivity.rs  reg-positivity.stderr  undeclared-const.rs  undeclared-const.stderr  undeclared-node.rs  undeclared-node.stderr  undeclared-var.rs  undeclared-var.stderr  undef.rs  undef.stderr
chandeliers-lus/tests/compile_fail/ui/clk/: bad-binding.rs  bad-binding.stderr  bad-clock.rs  bad-clock.stderr  clock-cast.rs  clock-cast.stderr  dependent-substitution.rs  dependent-substitution.rs.skip  dependent-substitution.stderr  easy.rs  easy.rs.skip  incremental.rs  inhomogeneous-tup.rs  inhomogeneous-tup.stderr  merge.rs  merge.stderr  pre-clocked.rs  pre-clocked.stderr  reclock.rs  reclock.stderr  refine.rs  refine.stderr  too-fast.rs  too-fast.stderr  too-slow.rs  too-slow.stderr  undeclared.rs  undeclared.stderr
chandeliers-lus/tests/compile_fail/ui/options/: malformed.rs  malformed.stderr  not-applicable.rs  not-applicable.stderr  pub.rs  pub.stderr
chandeliers-lus/tests/compile_fail/ui/syn/: kw.rs  kw.stderr  noassoc.rs  noassoc.stderr  unclosed.rs  unclosed.stderr
chandeliers-lus/tests/compile_fail/ui/tc/: all-stmts.rs  all-stmts.stderr  all-tup.rs  all-tup.stderr  both-sides.rs  both-sides.stderr  floateq.rs  floateq.stderr  if-int.rs  if-int.stderr  main-sig.rs  main-sig.stderr  not-found.rs  not-found.stderr  shadow.rs  shadow.stderr  strlit.rs  strlit.stderr  trailing.rs  trailing.stderr  tuples.rs  tuples.stderr  when-int.rs  when-int.stderr  when-missing.rs  when-missing.stderr  when-on-const.rs  when-on-const.stderr  when-self.rs  when-self.stderr
chandeliers-lus/tests/compile_fail/ui/tc/builtin/: float-in.rs  float-in.stderr  float-out.rs  float-out.stderr
chandeliers-lus/tests/fail/ui/causality/: cycle-const.rs  cycle-const.stderr  cycle-node.stderr  cycle-var.rs  cycle-var.stderr  loop.rs  positivity.stderr  redef-const.stderr  redef-node-extern.stderr  redef-node.rs  redef-node.stderr  redef-var-def.stderr  redef-var-ii.rs  redef-var-ii.stderr  redef-var-io.rs  redef-var-io.stderr  redef-var-iv.stderr  redef-var-oo.stderr  redef-var-ov.stderr  redef-var-vv.rs  redef-var-vv.stderr  undef.rs  undef.stderr
chandeliers-lus/tests/fail/ui/clk/: bad-binding.rs  dependent-substitution.rs  too-fast.rs  too-slow.rs
chandeliers-lus/tests/fail/ui/options/: malformed.stderr  not-applicable.rs  pub.rs  pub.stderr
chandeliers-lus/tests/fail/ui/syn/: kw.rs  unclosed.rs  unclosed.stderr
chandeliers-lus/tests/fail/ui/tc/: floateq.stderr  missing.rs  missing.stderr  not-found.stderr  shadow.stderr  trailing.rs  trailing.stderr  tuples.rs  unit-arg.rs  unit-arg.stderr  when-missing.rs  when-missing.stderr  when-on-const.rs  when-self.rs  when-self.stderr
chandeliers-lus/tests/pass/dead_code/: hidden-main.rs
chandeliers-lus/tests/pass/given/: ex001.rs  ex002.rs  ex003.rs  ex004.rs
chandeliers-lus/tests/pass/options/: ext-main.rs  ext-trace.rs  main.rs  once.rs  trace-fmt.rs
chandeliers-lus/tests/pass/poly/: clkpre.rs  extern.rs  initpre.rs  pre.rs  swap.rs
chandeliers-lus/tests/pass/registers/: chained-fby.rs  clocked.rs  fby.rs  pre.rs
chandeliers-lus/tests/pass/std/: counters.rs  floateq.rs  fulladder.rs  merge.rs  rand.rs  retdep.rs  slow.rs
chandeliers-lus/tests/pass/syn/: args.rs  assoc.rs  fby-assoc.rs  iftup.rs  node-ordering.rs  then-assoc.rs  tup-feedback.rs  unit-arg.rs  when.rs  when.rs.skip
chandeliers-lus/tests/pass/ui/: assign.rs  atomics.rs  collision.rs  constexpr.rs  dependent-substitution.rs  empty.rs  kw.rs  pre-when.rs  repeated-extern.rs  same-name.rs  unit-tuple.rs
chandeliers-lus/tests/warn/dead_code/: exported.rs  exported.stderr  hidden-main.rs  hidden-main.stderr  never-read.rs  never-read.stderr  unused-import.rs  unused-import.stderr  unused-toplevel.rs  unused-toplevel.stderr  unused.rs  unused.stderr
chandeliers-lus/tests/warn/options/: redundant.rs  redundant.stderr
chandeliers-macros/: Cargo.toml
chandeliers-macros/src/: lib.rs
chandeliers-san/: Cargo.toml  README.md
chandeliers-san/src/: ast.rs  candle.rs  causality.rs  clockcheck.rs  clockcheck.rs.bak  codegen.rs  lib.rs  positivity.rs  sp.rs  transparent.rs  typecheck.rs
chandeliers-san/src/ast/: mod.rs  options.rs
chandeliers-san/src/candle/: ast.rs  causality.rs  codegen.rs  mod.rs  positivity.rs  typecheck.rs
chandeliers-san/src/causality/: depends.rs  graph.rs  mod.rs
chandeliers-san/src/codegen/: constexpr.rs  mod.rs  options.rs
chandeliers-sem/: Cargo.toml  README.md
chandeliers-sem/src/: candle.rs  lib.rs  nillable.rs  registers.rs  sanity.rs  stepping.rs  time_travel.rs
chandeliers-sem/src/impls/: avg.rs  counters.rs  mod.rs
chandeliers-sem/src/tests/: mod.rs  sanity.rs
chandeliers-sem/src/tests/impls/: avg.rs  counters.rs  fib.rs  mod.rs
chandeliers-std/: Cargo.toml  README.md
chandeliers-std/src/: cast.rs  lib.rs  rand.rs
chandeliers-syn/: Cargo.toml  README.md
chandeliers-syn/src/: ast.rs  lib.rs  test.rs  translate.rs
chandeliers-syn/src/translate/: mod.rs  options.rs
examples/features/: Cargo.toml
examples/features/src/: main.rs
(+71 files in other folders)
