[package]
name = "chandeliers"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandeliers-lus = { path = "chandeliers-lus", version = "0.4.2" }
chandeliers-sem = { path = "chandeliers-sem", version = "0.4.2" }
chandeliers-std = { path = "chandeliers-std", version = "0.4.2" }

