[package]
name = "chandeliers"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandeliers-lus = { path = "chandeliers-lus", version = "0.5.0" }
chandeliers-sem = { path = "chandeliers-sem", version = "0.5.0" }
chandeliers-std = { path = "chandeliers-std", version = "0.5.0" }

