[package]
name = "chandeliers"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandeliers-lus = { path = "chandeliers-lus", version = "1.0.0" }
chandeliers-sem = { path = "chandeliers-sem", version = "1.0.0" }
chandeliers-std = { path = "chandeliers-std", version = "1.0.0" }

