[package]
name = "chandeliers-err"
version = "0.3.1"
edition = "2021"
authors = [ "Neven <vanille@crans.org>" ]
description = "Internal error message generators for the Chandeliers project"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vanille-N/chandeliers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
