[package]
name = "chandeliers-lus"
version = "0.2.0"
edition = "2021"
authors = [ "Neven <vanille@crans.org>" ]
description = "Procedural macros for the Chandeliers project, implementing a deep embedding of Lustre in Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vanille-N/chandeliers"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
chandeliers-syn = "0.2"
chandeliers-san = "0.2"
chandeliers-sem = "0.2"
trybuild = "1.0"

[dev-dependencies]
chandeliers-syn = "0.2"
rand = "0.8.5"
