[package]
name = "chandeliers-lus"
version = "0.2.1"
edition = "2021"
authors = [ "Neven <vanille@crans.org>" ]
description = "Procedural macros for the Chandeliers project, implementing a deep embedding of Lustre in Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vanille-N/chandeliers"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"
chandeliers-syn = { path = "../chandeliers-syn", version = "0.2.1" }
chandeliers-san = { path = "../chandeliers-san", version = "0.2.1" }
chandeliers-sem = { path = "../chandeliers-sem", version = "0.2.1" }
rand = "0.8.5"

[dev-dependencies]
chandeliers-syn = { path = "../chandeliers-syn", version = "0.2.1" }
chandeliers-std = { path = "../chandeliers-std", version = "0.2.1" }
rand = "0.8.5"
