[package]
name = "chandeliers-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
chandeliers-syn = { path = "../chandeliers-syn" }
chandeliers-sem = { path = "../chandeliers-sem" }
trybuild = "1.0"

[dev-dependencies]
chandeliers-syn = { path = "../chandeliers-syn" }
