[package]
name = "chandeliers-san"
version = "0.2.3"
edition = "2021"
authors = [ "Neven <vanille@crans.org>" ]
description = "AST definition and static analysis procedures of Candle"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vanille-N/chandeliers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
chandeliers-sem = { path = "../chandeliers-sem", version = "0.2.3" }
chandeliers-err = { path = "../chandeliers-err", version = "0.2.3" }
