[package]
name = "chandeliers-std"
version = "0.3.2"
edition = "2021"
authors = [ "Neven <vanille@crans.org>" ]
description = "A standard library for the Chandeliers suite"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vanille-N/chandeliers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandeliers-sem = { path = "../chandeliers-sem", version = "0.3.2" }
rand = "0.8.5"
