[package]
name = "chandeliers-syn"
version = "0.5.0"
edition = "2021"
authors = [ "Neven <vanille@crans.org>" ]
description = "Syntax of the Lustre language, to be parsed by procedural macros"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vanille-N/chandeliers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
syn_derive = "0.1.7"
chandeliers-err = { path = "../chandeliers-err", version = "0.5.0" }
chandeliers-san = { path = "../chandeliers-san", version = "0.5.0" }
