[package]
name = "features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandeliers-lus = { path = "../../chandeliers-lus" }
chandeliers-sem = { path = "../../chandeliers-sem" }
chandeliers-std = { path = "../../chandeliers-std" }
